@@ -47,7 +47,7 @@ install: build
 	dh_installdirs
 
 	# Add here commands to install the package into debian/aprx.
-	$(MAKE) DESTDIR=$(CURDIR)/debian/aprx install
+	$(MAKE) VARLOG=/var/log/aprx DESTDIR=$(CURDIR)/debian/aprx install-deb
 
 
 # Build architecture-independent files here.
