@@ -1,0 +1,10 @@
+@VARLOG@/rf.log @VARLOG@/aprx.log {
+	monthly
+	rotate 12
+	compress
+	delaycompress
+	missingok
+	notifempty
+	create 644 root adm
+}
+
